# MCPShield

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT_CHECKLIST.md  Dockerfile  LANDING_PAGE_STATUS.md  LANDING_PAGE_UPDATES.md  README.md  VISUAL_TEST_GUIDE.md  run.sh
dashboard/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
dashboard/public/: manifest.json  scene.splinecode  sitemap.xml
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  mock.ts
dashboard/src/components/: AnimatedNumber.tsx  BehaviorSparkline.tsx  CodeBlock.tsx  EventRow.tsx  Layout.tsx  LiveFeed.tsx  OWASPScorecard.tsx  ProgressRing.tsx  ServerRow.tsx  SeverityBadge.tsx  Sidebar.tsx  Sparkline.tsx  StatCard.tsx  ThreatCard.tsx  TiltCard.tsx  TrendChart.tsx
dashboard/src/hooks/: useApi.ts  useRelativeTime.ts
dashboard/src/landing/: CTA.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Showcase.tsx
dashboard/src/lib/: animations.ts  utils.ts
dashboard/src/pages/: AuditLog.tsx  Compliance.tsx  Honeypot.tsx  LandingPage.tsx  Overview.tsx  Servers.tsx  Settings.tsx  Threats.tsx  WaitlistAdmin.tsx
rules/: default_rules.toml
server/: .env.example  Cargo.toml  railway.toml
server/src/: main.rs
server/src/routes/: compliance.rs  honeypot.rs  mod.rs  servers.rs  threats.rs  trend.rs
server/src/waitlist/: db.rs  email.rs  mod.rs  routes.rs
src/: cli.rs  main.rs
src/proxy/: mod.rs
tests/fixtures/: clean_tool.json  credential_leak_output.json  poisoned_tool.json  shadow_attack.json
