[package]
name = "mcpshield"
version = "0.1.0"
edition = "2021"
description = "Runtime security firewall for MCP servers"
license = "MIT"
keywords = ["mcp", "security", "ai", "firewall", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dirs = "5"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
